<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ITP app challenge</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="loading_toilets">Toiletten ophalen</string>
    <string name="loading">Even geduld aub...</string>
    <string name="add_place">Plaats toevoegen</string>
	<string name="error">Er is iets misgelopen.</string>
	<string name="name_hint">Naam</string>
	<string name="address_hint">Straat</string>
	<string name="zipcode_hint">Zipcode</string>
	<string name="city_hint">Stad/dorp</string>
	<string name="public_hint">Publieke plaats</string>
	
</resources>
